--- a/Script/Report.html
+++ b/Script/Report.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-06-15" />
+<meta name="date" content="2025-06-17" />
 
 <title>DTP vaccinations Report</title>
 
@@ -357,7 +357,7 @@ Q. Faber (2861921)<br />
 R.A. Kali (2850680)<br />
 T. Adam (student number)<br />
 T.M.V. Verbeek (student number)</p></h4>
-<h4 class="date">2025-06-15</h4>
+<h4 class="date">2025-06-17</h4>
 
 </div>
 
@@ -459,14 +459,14 @@ url_childdeath &lt;- &quot;https://www.dropbox.com/scl/fi/wuopfxxyux4dccc9rbibn/
 <h3>Data Source Credibility</h3>
 <p>Source 1: DTP Vaccination Coverage</p>
 <ul>
-<li>Credibility: This dataset is published by the World Health
-Organization (WHO), the leading global authority on public health. WHO
-collaborates with national governments and UNICEF to compile and
-validate immunization data (World Health Organization, 2024).</li>
-<li>Data Quality: The dataset includes WHO/UNICEF Estimates of National
-Immunization Coverage (WUENIC), which are based on a combination of
-administrative data, household surveys, and expert review. This
-triangulation improves accuracy and reliability.</li>
+<li>Credibility: This dataset is published by the WHO/UNICEF Estimates
+of National Immunization Coverage (WUENIC), the leading global authority
+on public health. WHO collaborates with national governments and UNICEF
+to compile and validate immunization data (World Health Organization,
+2024).</li>
+<li>Data Quality: The data is based on a combination of administrative
+data, household surveys, and expert review. This triangulation improves
+accuracy and reliability.</li>
 <li>Relevance: It directly provides the DTP3 coverage rates, which are
 central to the research question. The data is also disaggregated by
 region and year, allowing for temporal and cross-regional analysis.</li>
